Remove potential fix for smooth scroll on iOS as it does not work.

--- a/css/style.css
+++ b/css/style.css
@@ -9,9 +9,7 @@ body {
   font-size: 16px;
   line-height: 1.6;
   letter-spacing: 2%;
-  font-family: 'Roboto', sans-serif;
-  overflow-y: scroll;
-  -webkit-overflow-scrolling: touch; }
+  font-family: 'Roboto', sans-serif; }
 
 h1, h2, h3, h4, h5, h6 {
   line-height: 1.6;
